{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 6,
  "lineage": "79d43aa2-bed4-d74e-5a3c-8a80f5b76e4e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c2c50437d0b80d",
            "arn": "arn:aws:ec2:us-west-2:982656938909:instance/i-0ff489ebba0a241bd",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ff489ebba0a241bd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansibletest",
            "monitoring": false,
            "primary_network_interface_id": "eni-0b3a2cbf280b47f00",
            "private_dns": "ip-172-31-4-127.us-west-2.compute.internal",
            "private_ip": "172.31.4.127",
            "public_dns": "ec2-34-219-92-44.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.92.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0fa156d6377533ba8",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20191219022451270000000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1ffbd245",
            "tags": {
              "Env": "dev",
              "Name": "db",
              "Terraform": "Yes"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-042869e8e0cdea8ec"
            ]
          },
          "dependencies": [
            "aws_security_group.dbservers_sg",
            "aws_security_group.webservers_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c2c50437d0b80d",
            "arn": "arn:aws:ec2:us-west-2:982656938909:instance/i-0229f48befdc8dbdb",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0229f48befdc8dbdb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansibletest",
            "monitoring": false,
            "primary_network_interface_id": "eni-00f3e165d1a723c39",
            "private_dns": "ip-172-31-4-239.us-west-2.compute.internal",
            "private_ip": "172.31.4.239",
            "public_dns": "ec2-34-220-203-40.us-west-2.compute.amazonaws.com",
            "public_ip": "34.220.203.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ee9e7edcc8a1a271",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20191219022444470100000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1ffbd245",
            "tags": {
              "Env": "dev",
              "Name": "web",
              "Terraform": "Yes"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0498182970f7be898"
            ]
          },
          "dependencies": [
            "aws_security_group.webservers_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c2c50437d0b80d",
            "arn": "arn:aws:ec2:us-west-2:982656938909:instance/i-0c8a3cce8f842d3c4",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0c8a3cce8f842d3c4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansibletest",
            "monitoring": false,
            "primary_network_interface_id": "eni-06aca2cff0efaa771",
            "private_dns": "ip-172-31-13-251.us-west-2.compute.internal",
            "private_ip": "172.31.13.251",
            "public_dns": "ec2-52-34-84-33.us-west-2.compute.amazonaws.com",
            "public_ip": "52.34.84.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-099376e9bdb44df8c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20191219022444470100000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1ffbd245",
            "tags": {
              "Env": "dev",
              "Name": "web",
              "Terraform": "Yes"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0498182970f7be898"
            ]
          },
          "dependencies": [
            "aws_security_group.webservers_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dbservers_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:982656938909:security-group/sg-042869e8e0cdea8ec",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042869e8e0cdea8ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0498182970f7be898"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20191219022451270000000002",
            "name_prefix": null,
            "owner_id": "982656938909",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-1310dd6b"
          },
          "dependencies": [
            "aws_security_group.webservers_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webservers_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:982656938909:security-group/sg-0498182970f7be898",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0498182970f7be898",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20191219022444470100000001",
            "name_prefix": null,
            "owner_id": "982656938909",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-1310dd6b"
          }
        }
      ]
    }
  ]
}